@@ -44,6 +44,7 @@ func init() {
 		m.Restore(sys.Meta())
 
 		reportCmd.Flags().BoolVarP(&m.Report.Decoys, "decoys", "", false, "add decoy observations to reports")
+		reportCmd.Flags().BoolVarP(&m.Report.MSstats, "msstats", "", false, "create an output compatible to MSstats")
 	}
 
 	RootCmd.AddCommand(reportCmd)
